--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>SARA soon...</title>
+	<title>SARA</title>
 
 	<script src="libs/gsap/gsap.min.js" defer></script>
 
