--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 	</div>
 
-	<video src="media/background.mp4" class="video-background" muted></video>
+	<video src="media/background.mp4" class="video-background" loop muted autoplay></video>
 
 </body>
 </html>
